# SmartHomeWeb

./: Cargo.toml  README.md
src/: endpoints.rs  errors.rs  main.rs  wrapper.rs
src/endpoints/: device.rs  house.rs  room.rs
