[package]
name = "smart_home_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
smarthome = { git = "https://github.com/breadrock1/SmartHome.git", branch = "master" }
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["full"] }
